--- a/css/media.css
+++ b/css/media.css
@@ -19,6 +19,18 @@
         min-height: auto;
         padding: 40px 0;
     }
+    .fav-container {
+        flex-direction: column;
+    }
+    .fav-item {
+        width: 100%;
+    }
+    .fav-text {
+        width: 100%;
+    }
+    .fav-img{
+        width: 30%;
+    }
 }
 
 @media(max-width:800px) {
@@ -55,5 +67,16 @@
     header .container {
         padding-left: 0;
         padding-right: 0;
+    }
+}
+
+@media(max-width:600px) {
+    .fav-item {
+        flex-direction: column;
+        align-items: center;
+    }
+    .fav-img {
+        width: 70%;
+        margin: 0 auto;
     }
 }
