--- a/css/media.css
+++ b/css/media.css
@@ -1,3 +1,21 @@
+@media(max-width:1200px) {
+	.service {
+		flex-direction: column;
+	}
+	.service-slider,
+	.service-block {
+		width: 100%;
+	}
+	.service-slider {
+		height: 280px;
+	}
+	.slide img {
+		width: 100%;
+		object-fit: cover;
+		object-position: bottoms;
+	}
+}
+
 @media(max-width:1000px) {
     header .container {
         flex-direction: column;
@@ -68,15 +86,25 @@
         padding-left: 0;
         padding-right: 0;
     }
+    .service-item {
+        width: 100%;
+    }
 }
 
 @media(max-width:600px) {
     .fav-item {
-        flex-direction: column;
-        align-items: center;
-    }
-    .fav-img {
-        width: 70%;
-        margin: 0 auto;
-    }
+		flex-direction: column;
+		align-items: center;
+	}
+	.fav-img {
+		width: 70%;
+		margin:0 auto;
+		border:3px solid var(--green);
+	}
+	.slide img {
+		filter: blur(5px);
+	}
+	.slick-center img {
+		filter: blur(0);
+	}
 }
