--- a/css/media.css
+++ b/css/media.css
@@ -49,6 +49,9 @@
     .fav-img{
         width: 30%;
     }
+    .tours-container a {
+        flex: 0 32%;
+    }
 }
 
 @media(max-width:800px) {
@@ -89,6 +92,9 @@
     .service-item {
         width: 100%;
     }
+    .tours-container a {
+        flex: 0 49%;
+    }
 }
 
 @media(max-width:600px) {
@@ -107,4 +113,7 @@
 	.slick-center img {
 		filter: blur(0);
 	}
+    .tours-container a {
+        flex: 0 100%;
+    }
 }
